--- a/src/app/styles/config/resetCustom.scss
+++ b/src/app/styles/config/resetCustom.scss
@@ -1,7 +1,3 @@
-body {
-  background-color: var(--bg-read-color-body);
-}
-
 p {
   padding-top: 8px;
   padding-bottom: 8px;
@@ -15,4 +11,14 @@ ol li {
   overflow: hidden !important;
   /* Можно добавить padding-right, чтобы компенсировать исчезновение скроллбара */
   padding-right: var(--scrollbar-width, 0);
+}
+
+body {
+  transition: background-color 2s ease-in-out;
+}
+
+#root {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
