--- a/src/pages/landing/Landing.module.scss
+++ b/src/pages/landing/Landing.module.scss
@@ -1,14 +1,12 @@
 @use '@includes/index.scss' as *;
 
-.wrapper {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  // padding-top: 96px;
-  width: 100%;
-  min-height: 200vh;
-  background: var(--bg-color-solid-body);
-}
+// .wrapper {
+//   display: flex;
+//   flex-direction: column;
+//   align-items: center;
+//   // padding-top: 96px;
+//   width: 100%;
+// }
 
 .headingContainer {
   display: grid !important;
