--- a/src/shared/ui/sections/FooterNavigation/FooterNavigation.module.scss
+++ b/src/shared/ui/sections/FooterNavigation/FooterNavigation.module.scss
@@ -47,10 +47,10 @@
 .buttonContent {
   display: inline-flex;
   align-items: center;
+  gap: 16px;
 }
 
 .icon {
-  margin-right: 0.5rem;
   flex-shrink: 0;
 }
 
