--- a/src/pages/landing/assets/ItSphereTable/ItSphereTable.module.scss
+++ b/src/pages/landing/assets/ItSphereTable/ItSphereTable.module.scss
@@ -51,7 +51,8 @@
   }
 
   &:hover {
-    background-color: rgba(245, 245, 245, 0.7);
+    // background-color: rgba(245, 245, 245, 0.9);
+    background-color: rgba(207, 207, 207, 0.9);
   }
 }
 
