--- a/src/pages/landing/assets/ItSphereTable/ItSphereTable.module.scss
+++ b/src/pages/landing/assets/ItSphereTable/ItSphereTable.module.scss
@@ -3,7 +3,9 @@
   margin: 24px 0;
   border-radius: 24px;
   background-color: rgba(255, 255, 255, 0.9);
-  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.12);
+  // box-shadow: 0 4px 20px rgba(0, 0, 0, 0.12);
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px, rgba(0, 0, 0, 0) 0px 8px 4px, rgba(0, 0, 0, 0) 0px 16px 8px,
+    rgba(0, 0, 0, 0) 0px 32px 16px;
   backdrop-filter: blur(6px);
 }
 
