--- a/src/pages/landing/assets/PreloadImages/PreloadImages.module.scss
+++ b/src/pages/landing/assets/PreloadImages/PreloadImages.module.scss
@@ -11,7 +11,8 @@
   -webkit-user-drag: none;
   display: inline-block;
   max-width: 100%;
-  height: auto;
+  height: 0;
+  overflow: hidden !important;
 }
 
 /* Вариант 2 — остаётся в потоке, но не занимает заметного места (ширина/высота 0) */
